--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ p.sub-title-white { /* Sub Title White */
 	
 p.slider-black { /* Slider Title Black */
 	font-family: 'Montserrat-Bold';
-	font-size: 4em;
+	font-size: 2.5em;
 	font-weight: normal;
 	color: #111111;
 	letter-spacing: -2px;
@@ -200,7 +200,7 @@ p.slider-black { /* Slider Title Black */
 	
 p.slider-white { /* Slider Title White */
 	font-family: 'Montserrat-Bold';
-	font-size: 4em;
+	font-size: 2.5em;
 	font-weight: normal;
 	color: #fff;
 	letter-spacing: -2px;
@@ -376,10 +376,13 @@ img {
 	height: auto;
 	float: left;
 	display: inline-block;
-	margin-top: 18px;
+	margin-top: 6px;
 	margin-left: 50px;
 	}
 
+.logo img {
+	max-width: 65%;
+}
 .nav-fullscreen {
 	width: 450px;
 	height: auto;
@@ -420,7 +423,7 @@ img {
 	float: right;
 	display: none;
 	text-align: right;
-	margin-top: 45px;
+	margin-top: 16px;
 	margin-right: 50px;
 	}
 	
@@ -486,7 +489,7 @@ ul.drop-down li a:hover {
 #sidebar-header {
 	display: none;
 	width: 100%;
-	height: 110px;
+	height: 60px;
 	float: left;
 	background-color: rgba(17,17,17,1);
 	position: fixed;
@@ -507,7 +510,7 @@ ul.drop-down li a:hover {
 	}
 	
 #sidebar-header.small .logo {
-	width: 125px;
+	width: 175px;
 	margin-top: 10px;
 	}
 	
@@ -1301,7 +1304,7 @@ input[type="submit"]:hover {
 		
 	.sidebar-slider-full-width {
 		height: 900px;
-		margin-top: 110px;
+		margin-top: 60px;
 		}
 		
 	}
@@ -1383,7 +1386,7 @@ input[type="submit"]:hover {
 @media screen and (max-width:768px) {
 		
 	p.slider-black, p.slider-white {
-		font-size: 3em;
+		font-size: 2em;
 		}
 	
 	.nav-fullscreen {
@@ -1452,25 +1455,35 @@ input[type="submit"]:hover {
 	.grid-sizer, .item, .item-width-two, .item-width-two-right { 
 		width: 100%;
 		}
-		
+	.sidebar-slider-full-width.slide-1 {
+		background: url(../img/otw-slider/creative/project-1/slide-1_mobile.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
 	}
+	.sidebar-slider-full-width.slide-2 {
+		background: url(../img/otw-slider/creative/project-1/slide-2_mobile.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
+	}
+}
 	
 /* 450 */
 
 @media screen and (max-width:450px) {
-		
+	
+
+
 	p.slider-black, p.slider-white {
-		font-size: 2.5em;
+		font-size: 1.5em;
 		}
 	
 	.container-header {
 		padding: 0;
 		}
-		
-	.slider-caption {
-		top: 35%;
-		}
-		
 }
 
 /* CUSTOM */
@@ -1483,10 +1496,17 @@ input[type="submit"]:hover {
 	.mobile-only {
 		display: none !important;
 	}
+	.slider-caption {
+		top: 10%;
+	}
 }
+
 @media screen and (max-width:1200px) {
 	.block {
 		padding-left: 0px;
+	}
+	.slider-caption {
+		top: 0%;
 	}
 }
 
@@ -1515,6 +1535,7 @@ input[type="submit"]:hover {
 }
 
 .brands .brand-item img{
+	width: 100px;
 	max-width: 100%; 
 	max-height: 100%; 
 	display: block;
@@ -1532,6 +1553,15 @@ input[type="submit"]:hover {
 	overflow: hidden;
 }
 
+.sidebar-navigation-menu .row{
+	height: 100vh;
+	background-color: #111111;
+}
+
+.sidebar-navigation-menu {
+	border-right: 1px solid rgb(255, 156, 0);
+}
+
 .brands-slider .flex-direction-nav {
 	opacity: 1 !important;
 }
@@ -1541,11 +1571,99 @@ input[type="submit"]:hover {
 	overflow: hidden;
 }
 
+#sidebar-header {
+	border-bottom: 1px solid rgb(255, 156, 0);
+}
+
+.slider-caption p {
+	margin-bottom: 25px;
+	background-color:#111111;
+}
 .js-marquee {
 	margin-right: 0px !important;
 }
+
+.sidebar-slider-full-width.slide-1 {
+	background: url(../img/otw-slider/creative/project-1/slide-2.jpg) no-repeat center;
+	background-size: cover; 
+	-webkit-background-size: cover; 
+	-moz-background-size: cover; 
+	-o-background-size: cover;
+}
+.sidebar-slider-full-width.slide-2 {
+	background: url(../img/otw-slider/creative/project-1/slide-1.jpg) no-repeat center;
+	background-size: cover; 
+	-webkit-background-size: cover; 
+	-moz-background-size: cover; 
+	-o-background-size: cover;
+}
+.btn-contact {
+	position: absolute;
+	margin-top: -50px;
+	left: 10px;
+	z-index: 98;
+}
+
 @media screen and (max-width:1200px) {
 	.brands-slider .sidebar-slider-full-width {
 		margin-top: 0px;
 	}
+	.sidebar-slider-full-width.slide-1 {
+		background: url(../img/otw-slider/creative/project-1/slide-2.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
+	}
+	.sidebar-slider-full-width.slide-2 {
+		background: url(../img/otw-slider/creative/project-1/slide-1.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
+	}
+
 }
+@media screen and (max-width:668px) {
+	.sidebar-slider-full-width.slide-1 {
+		background: url(../img/otw-slider/creative/project-1/slide-2_mobile.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
+	}
+	.sidebar-slider-full-width.slide-2 {
+		background: url(../img/otw-slider/creative/project-1/slide-1.jpg) no-repeat center;
+		background-size: cover; 
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover;
+	}
+}
+
+.btn-contact {
+  background: #ff9d00;
+  background-image: -webkit-linear-gradient(top, #ff9d00, #9e5f00);
+  background-image: -moz-linear-gradient(top, #ff9d00, #9e5f00);
+  background-image: -ms-linear-gradient(top, #ff9d00, #9e5f00);
+  background-image: -o-linear-gradient(top, #ff9d00, #9e5f00);
+  background-image: linear-gradient(to bottom, #ff9d00, #9e5f00);
+  -webkit-border-radius: 5;
+  -moz-border-radius: 5;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #111111 1px;
+  text-decoration: none;
+}
+
+.btn-contact:hover {
+  background: #646464;
+  text-decoration: none;
+}
+
